fixed nav bar on mobile

--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 
 nav {
   display: flex;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   align-items: center;
   min-height: 10vh;
   background-color: #ffffff;
@@ -61,8 +61,7 @@ nav {
 
 .nav-links {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  align-content: space-around;
 }
 
 .nav-links ul {
@@ -79,7 +78,9 @@ nav {
 .nav-links a {
   text-decoration: none;
   color: #b09e99;
-  padding: 1rem;
+  padding-right: 1rem;
+  display: flex;
+  align-items: flex-end;
 }
 
 .nav-links a:hover {
@@ -120,9 +121,11 @@ nav {
   .main-header-name {
     font-size: 1.3rem;
   }
+
   .nav-links {
     font-size: 1.3rem;
   }
+
   .burger {
     display: none;
   }
@@ -138,14 +141,15 @@ nav {
   .nav-links {
     position: absolute;
     right: 0px;
-    height: 250px;
+    height: 210px;
     top: 80px;
     background-color: #ecebeb;
     display: flex;
     flex-direction: column;
+    justify-content: space-around;
     align-items: flex-end;
     font-size: 1.2rem;
-    width: 150px;
+    width: 120px;
     -webkit-transform: translate(100%);
     -moz-transform: translate(100%);
     -o-transform: translate(100%);
